# sysveil

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  release.yml
cmake/: Packaging.cmake
packaging/linux/: sysveil.desktop
packaging/macos/: Info.plist
qml/components/: Sidebar.qml
src/: CMakeLists.txt  main.cpp
src/core/: CpuProvider.h  DiskProvider.h  MemoryProvider.h  NetworkProvider.h  ProcessProvider.h  SystemMonitor.cpp  SystemMonitor.h
src/platform/linux/: CpuProvider.cpp  DiskProvider.cpp  MemoryProvider.cpp  NetworkProvider.cpp  ProcessProvider.cpp
src/platform/macos/: MemoryProvider.cpp  ProcessProvider.cpp
src/platform/windows/: CpuProvider.cpp
src/qml/: CpuHistoryModel.cpp  CpuHistoryModel.h  DiskHistoryModel.cpp  DiskHistoryModel.h  HistoryModel.h  MemoryHistoryModel.cpp  MemoryHistoryModel.h  MonitorBridge.cpp  MonitorBridge.h  NetworkHistoryModel.cpp  NetworkHistoryModel.h  ProcessModel.cpp  ProcessModel.h  main.qml
src/qml/components/: HeaderCell.qml  LiveChart.qml  MetricCard.qml  NavItem.qml  ProcessTable.qml  Sidebar.qml
src/qml/theme/: Theme.qml  qmldir
